@@ -15,9 +15,20 @@
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <https://www.gnu.org/licenses/>. *)
 
-(** Ubiquitous sets of MBID (i.e. UUID) strings *)
+(** Sets of things. *)
 
 module MBID : Set.S with type elt = string
+(** Ubiquitous sets of MBID (i.e. UUID) strings *)
 
 val mbid_union : MBID.t list -> MBID.t
 (** Shorthand for the union of a list of sets. *)
+
+module Integers : sig
+
+  module S : Set.S with type elt = int
+
+  val of_string : string -> (S.t, string) result
+  (** Parse expressions like [1,3-5,7]. *)
+
+end
+(** Integers. *)
